# Oxy-WebServer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RW.md  clear_log.sh  config.conf  init.sql  nginx.conf  test.html  重写流程简述.md
code/: main.cpp
code/config/: config.cpp
code/http/: httpconnect.cpp  httpconnect.h  httprequest.cpp  httprequest.h  httpresponse.cpp  test_httpconnect.cpp
code/log/: log.cpp  log.h
code/pool/: sqlconnRAII.h  sqlconnpool.cpp  threadpool.cpp  threadpool.h
code/server/: epoller.cpp  epoller.h  webserver.cpp  webserver.h
code/timer/: heaptimer.cpp  heaptimer.h  test_heaptimer.cpp
resources/: 400.html  403.html  404.html  405.html  error.html  index.html  login.html  picture.html  register.html  video.html  welcome.html
resources/css/: font-awesome.min.css  magnific-popup.css  style.css
resources/js/: bootstrap.min.js  custom.js  jquery.magnific-popup.min.js  magnific-popup-options.js  magnific-popup.min.js  script.js  smoothscroll.js  wow.min.js
test/: heaptimer_test.sh  httpconnect_test.sh
